<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="-50dp"
    android:background="@color/bk_fgm"
    tools:context=".activity.HistoryActivity"
    tools:ignore="VisualLintBounds">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintBounds">

        <ImageButton
            android:id="@+id/img_bt_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:contentDescription="@string/todo"
            android:src="@drawable/slt_bt_back"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/history"
            android:textColor="#000000"
            android:textSize="20sp" />
    </FrameLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:divider="@color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

    </ListView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.widget.Button
            android:id="@+id/delete_all_bt"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/delete_all_bt"
            android:textColor="#680000"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize,VisualLintBounds,TextSizeCheck" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>