<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bk_fgm"
    tools:context=".fragment.DialogueFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            tools:ignore="UselessParent">


            <ImageButton
                android:id="@+id/img_bt_ht"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="15dp"
                android:background="@null"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/slt_bt_his"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/title_dia_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/title_fgm2"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/img_bt_add"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/slt_bt_add"
                tools:ignore="TouchTargetSizeCheck" />

        </FrameLayout>
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/msg_rcv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="85dp"
        android:overScrollMode="never" />

    <androidx.cardview.widget.CardView
        android:id="@+id/et_cv"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:elevation="3dp"
        app:cardCornerRadius="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/main_text_hint"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/send_bt_select"
                tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>