<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bk_fgm"
    tools:context=".fragment.PersonFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="190dp"
        android:clickable="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:elevation="3dp"
            app:cardCornerRadius="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/avatar_img_ps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/avatar_user_slt"
                tools:ignore="ImageContrastCheck" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name_tv_ps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="霏霜雾霞"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toTopOf="@+id/cardView2"
            app:layout_constraintVertical_bias="0.37"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tokens_used_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="已使用token数：416"
            android:textColor="#606060"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="@+id/name_tv_ps"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/name_tv_ps"
            app:layout_constraintTop_toBottomOf="@+id/name_tv_ps"
            tools:ignore="HardcodedText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/person_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/click_pressed"
                android:clickable="true">

                <ImageView
                    android:id="@+id/icon_ps_iv"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@null"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_person"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/title_ps_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_ps_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/person_data"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_ps_iv"
                    app:layout_constraintEnd_toStartOf="@+id/img_ps"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/icon_ps_iv"
                    app:layout_constraintTop_toTopOf="@+id/icon_ps_iv" />

                <ImageView
                    android:id="@+id/img_ps"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="40dp"
                    android:contentDescription="@string/todo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/title_ps_tv"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/enter"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/history_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/click_pressed"
                android:clickable="true">

                <ImageView
                    android:id="@+id/icon_ht_iv"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@null"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_history"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/title_ht_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_ht_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/history"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_ht_iv"
                    app:layout_constraintEnd_toStartOf="@+id/img_ht"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/icon_ht_iv"
                    app:layout_constraintTop_toTopOf="@+id/icon_ht_iv" />

                <ImageView
                    android:id="@+id/img_ht"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="40dp"
                    android:contentDescription="@string/todo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/title_ht_tv"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/enter"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/icon_sp_iv"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@null"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_splash"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/title_sp_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_sp_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/splash"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_sp_iv"
                    app:layout_constraintEnd_toStartOf="@+id/switch_sp"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/icon_sp_iv"
                    app:layout_constraintTop_toTopOf="@+id/icon_sp_iv" />

                <Switch
                    android:id="@+id/switch_sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:checked="true"
                    android:switchMinWidth="60dp"
                    android:thumbTint="#00C4FF"
                    android:track="@drawable/switch_track_slt"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/title_sp_tv"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="40dp"
                app:cardCornerRadius="100dp"
                app:cardElevation="3dp">

                <android.widget.Button
                    android:id="@+id/exit_button"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="#FFE4E4"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/exit"
                    android:textColor="@color/e40000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="VisualLintButtonSize,VisualLintBounds,TextSizeCheck" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>